# garbage

./: Lab4VM.docx  lab1_comp_arch.docx  lab3.asm  lab3_2.asm  lab5_fixed.asm  lab_1_aisd.docx  strings.rar  vm_1.docx  vm_4.docx  vm_4_2.docx  zzz_graph_test.txt
Bellman-Ford/: Bellman-Ford.pro  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  helpbrowser.h  inctree.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newone.ui  node.h
DFS/: DFS - Copy.pro  DFS.pro  bintree.cpp  bintree.h  edge.h  graphwidget.cpp  inctree.h  index.htm  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp
Ford-Fulkerson/: Ford-Fulkerson.pro  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  helpbrowser.h  inctree.cpp  inctree.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  show1.cpp
bin_tree_graph_release/: AISD_L4.pro  AISD_L4.pro.user.ed53566  bintree.cpp  bintree.h  graphwidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  show1.h
container_1000/: container_1000.sln
debug_tests/: output.txt  zzz_B-M_test.txt  zzz_B-M_test_2.txt  zzz_F-F_test.txt  zzz_F-F_test_2.txt  zzz_dfs_test.txt  zzz_graph_test.txt  zzz_hier_list_test_main.txt  zzz_hier_list_test_misc.txt  zzz_inc_tree_test - Copy.txt  zzz_inc_tree_test.txt  (+5 more)
labs/sem2/piaa/lab_5_fin/: CMakeLists.txt  build.sh  rebuild.sh
labs/sem2/piaa/lab_5_fin/include/: help_func.h  kmp.h
labs/sem2/piaa/lab_5_fin/src/: cycle_shift.cpp  kmp.cpp  lab_5.cpp  naive_cmp.cpp  test.cpp
strings/lab6/: CMakeLists.txt
strings/lab6/include/: bohr.h
strings/lab6/src/: bohr.cpp  joker.cpp  lab_6.cpp
(+304 files in other folders)
