cmake_minimum_required(VERSION 2.8)
project(lab_5)
set(CMAKE_CXX_FLAGS "-Wall -std=c++0x")

find_package(GTest REQUIRED)
include_directories(include ${GTEST_INCLUDE_DIRS})

set (SOURCE src/lab_5.cpp src/kmp.cpp src/help_func.cpp)
set (TESTSOURCE src/test.cpp src/kmp.cpp src/help_func.cpp)
set (SHIFTSOURCE src/cycle_shift.cpp src/kmp.cpp src/help_func.cpp)
set (CMPSOURCE src/naive_cmp.cpp src/kmp.cpp src/help_func.cpp)

if (main)
    add_executable(lab_5 ${SOURCE})
endif()
if (shift)
    add_executable(cycle_shift ${SHIFTSOURCE})
endif()
if (cmp)
    add_executable(naive_cmp ${CMPSOURCE})
endif()
if (test)
    add_executable(lab_5_test ${TESTSOURCE})
    target_link_libraries(lab_5_test ${GTEST_LIBRARIES} pthread)
    enable_testing()
    add_test(test "./lab_5_test")
endif()
